# BayesianBinding

./: .gitignore  README.md  pyproject.toml
data/bonin_2022_delta25_dump/: metadata.json
data/lysozyme_waxs_nag2/: metadata.json  waxs_nag2.npz
data/nguyen_2022_racemic_mixture/: metadata.json
docs/: BAYES_FACTORS.md  WAXS.md
examples/: README.md  _common.py  model_comparison.py
examples/bonin_2022_delta25_dump/: analysis.ipynb  fit.py
examples/nguyen_2018_mg_edta/: analysis.ipynb  fit.py
examples/nguyen_2022_enantiomeric_mixture/: analysis.ipynb  fit.py
examples/nguyen_2022_model_selection/: analysis.ipynb  bayes_factors.py  fit.py
src/bayesian_binding/: __init__.py  _jax_config.py  bayes_factor.py  constants.py  data.py  evidence.py  inference.py  models.py  optimization.py  plotting.py  regression.py  scattering.py
tests/: conftest.py  test_bayes_factor.py  test_bayes_factor_analytic_regression.py  test_bayes_factor_bridge_regression.py  test_bayes_factor_consistency.py  test_bonin_2022_delta25_dump_regression.py  test_curated_itc.py  test_data.py  test_evidence.py  test_lysozyme_nag2_waxs_regression.py  test_models.py  test_nguyen_2018_mg_edta_regression.py  test_nguyen_2022_racemic_mixture_regression.py  test_optimization.py  test_plotting.py  test_scattering.py  test_smoke.py
tests/fixtures/: simple.itc
